changes befor push
