# src/routes/userRoute.js
@@ -4,6 +4,7 @@ import {
   loginUser,
   searchUser,
   sendNotify,
+  deleteUser,
 } from "../controllers/userController.js";
 
 const router = express.Router();
@@ -15,5 +16,6 @@ router.post("/register", registerUsers);
 router.post("/login", loginUser);
 router.get("/searchUser", searchUser);
 router.get("/notifications", sendNotify);
+router.post("/deleteuser", deleteUser);
 
 export default router;
